# Q-A-RAG-Chatbot

./: .gitignore  README.md  pyproject.toml
backend/: data_ingestion.py  main.py  rag_chain.py  retrieval.py
frontend/: main.py
next-frontend/: package-lock.json  package.json
next-frontend/src/app/: globals.css  layout.tsx  page.tsx
next-frontend/src/components/: CommandPalette.tsx
